// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Компонент Panel Контент 1`] = `
"[36m<body>[39m
  [36m<div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-bdvvtL bxZgRB\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-gsDKAQ eQfDAi content\\"[39m
        [33mstyle[39m=[32m\\"color: black;\\"[39m
      [36m>[39m
        [36m<div>[39m
          [0mpanel[0m
        [36m</div>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</body>[39m"
`;

exports[`Компонент Panel Футер 1`] = `
"[36m<body>[39m
  [36m<div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-bdvvtL bxZgRB\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-gsDKAQ eQfDAi\\"[39m
      [36m/>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</body>[39m"
`;

exports[`Компонент Panel Шапка 1`] = `
"[36m<body>[39m
  [36m<div>[39m
    [36m<div[39m
      [33mclass[39m=[32m\\"sc-bdvvtL bxZgRB\\"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"sc-gsDKAQ eQfDAi\\"[39m
      [36m/>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</body>[39m"
`;
